--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 <body>
     <header>
         <img src="" alt="logo">
+        <nav>
+            <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Work</a></li>
+                <li><a href="#">Lifestyle</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
     </header>
     <article>
         <section id="about-me">
@@ -29,15 +37,17 @@
         </section>
         <form action="https://formspree.io/mariya.ishchuk@me.com" method="POST">
         <div>
-            <label for="email">Email:</label>
-            <input type="text" id="email" name="user_email" required/>
+            <label for="name">Your name:</label>
+            <input type="text" id="name" name="guest_name" required/>
         </div>
-        
+        <div>
+            <label for="email">Your email:</label>
+            <input type="text" id="email" name="guest_email" required/>
+        </div>
         <div>
             <label for="msg">Message:</label>
-            <textarea id="msg" name="user_message" required></textarea>
+            <textarea id="msg" name="guest_message" required></textarea>
         </div>
-        
         <div class="button">
             <button type="submit">Send your message</button>
         </div>
