--- a/index.html
+++ b/index.html
@@ -2,26 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My page</title>
+    <title>mari</title>
+    <link rel="stylesheet" href="css/style.css" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <img src="" alt="logo">
-        <nav>
-            <ul>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Work</a></li>
-                <li><a href="#">Lifestyle</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
+    <header class="white-blur">
+        <div class="header-container clearfix">
+            <h2 class="fullname">Mari <span class="surename">Ishchuk</span></h2>
+            <nav>
+                <a href="#" class="nav-item">About</a>
+                <a href="#" class="nav-item">Work</a>
+                <a href="#" class="nav-item">Lifestyle</a>
+                <a href="#" class="nav-item">Contact</a>
+            </nav>
+        </div>
+        <div class="front-end-dev">
+            <p>front-end<br>developer</p>
+        </div>
     </header>
     <article>
-        <section id="about-me">
-            <img src="" alt="My portrait">
-            <h1>Mariya Ishchuk</h1>
-            <h2>Front-end developer</h2>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+        <section class="about-me">
+            <h2 class="hi">hi!</h2>
+            <p class="my-story">Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
             sed diam nonummy nibh euismod tincidunt ut laoreet dolore
             magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
             quis nostrud exerci tation ullamcorper suscipit lobortis nisl
@@ -31,9 +34,8 @@
             accumsan et iusto odio dignissim qui blandit praesent luptatum
             zzril delenit augue duis dolore te feugait nulla facilisi.</p>
         </section>
-        <section id="work">
-            <img src="" alt="My workspace"></img>
-            
+        <section class="work">
+            <div class="workspace"></div>
         </section>
         <form action="https://formspree.io/mariya.ishchuk@me.com" method="POST">
         <div>
@@ -53,5 +55,13 @@
         </div>
     </form>
     </article>
+    <footer>
+        <nav>
+            <a href="https://www.skype.com/en/" class="nav-item"><img src="" alt="skype" title="masha.ishchuk"></a>
+            <a href="https://ua.linkedin.com/in/mariya-ishchuk-632301b7" class="nav-item"><img src="" alt="linkedin"></a>
+            <a href="https://www.facebook.com/mariya.ishchuk" class="nav-item"><img src="" alt="facebook"></a>
+            <a href="https://www.instagram.com/mari_ishchuk/" class="nav-item"><img src="" alt="instagram"></a>
+        </nav>
+    </footer>
 </body>
 </html>
