--- a/index.html
+++ b/index.html
@@ -65,31 +65,32 @@
     <section class="form">
         <p>Looking for a project of another type? Send me a little information about what you're looking for and I'll be in touch!</p>
         <p id="thanks"></p>
-    <form >
-        <label for="name">Your name:</label>
-        <input type="text" id="name" required/>
-        <br>
-        <label for="email">Your email:</label>
-        <input type="text" id="email" required/>
-        <br>
-        <label for="message">Message:</label>
-        <textarea id="message" required></textarea>
-        <br>
-        <button id="button">Send</button>
-    </form>
+        <form >
+            <label for="name">Your name:</label>
+            <input type="text" id="name" required/>
+            <br>
+            <label for="email">Your email:</label>
+            <input type="text" id="email" required/>
+            <br>
+            <label for="message">Message:</label>
+            <textarea id="message" required></textarea>
+            <br>
+            <button id="button">Send</button>
+        </form>
     </section>
     
     <footer>
-        <nav>
-            <a href="https://www.skype.com/en/" class="nav-item" target="_blank"><img src="" alt="skype" title="masha.ishchuk"></a>
-            <a href="https://ua.linkedin.com/in/mariya-ishchuk-632301b7" class="nav-item" target="_blank"><img src="" alt="linkedin"></a>
-            <a href="https://www.facebook.com/mariya.ishchuk" class="nav-item" target="_blank"><img src="" alt="facebook"></a>
-            <a href="https://www.instagram.com/mari_ishchuk/" class="nav-item" target="_blank"><img src="" alt="instagram"></a>
+        <nav class="social">
+            <a href="https://www.skype.com/en/" class="nav-item" target="_blank"><i class="fa fa-skype fa-3x" aria-hidden="true"></i></a>
+            <a href="https://ua.linkedin.com/in/mariya-ishchuk-632301b7" class="nav-item" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
+            <a href="https://www.facebook.com/mariya.ishchuk" class="nav-item" target="_blank"><i class="fa fa-facebook-square fa-3x" aria-hidden="true"></i></a>
+            <a href="https://www.instagram.com/mari_ishchuk/" class="nav-item" target="_blank"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
         </nav>
     </footer>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="js/parallax.min.js"></script>
+    <script src="https://use.fontawesome.com/d7110cabd2.js"></script>
     <script src="https://code.jquery.com/jquery-3.1.0.js" integrity="sha256-slogkvB1K3VOkzAI8QITxV3VzpOnkeNVsKvtkYLMjfk=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/index.js"></script>
 </body>
