--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
     </section>
     <section class="form">
         <div class="flex-form">
-        <p>Looking for a project of another type? Send me a little information about what you're looking for and I'll be in touch!</p>
-        <p id="thanks"></p>
             <form class="flex-outer">
+                <p class="get-in-touch">Looking for a project of another type? Send me a little information about what you're looking for and I'll be in touch!</p>
+                <p id="thanks"></p>
                 <label for="name"><span>Your name:</span>
                     <input type="text" id="name" required/>
                 </label>
@@ -89,6 +89,7 @@
             <a href="https://ua.linkedin.com/in/mariya-ishchuk-632301b7" class="nav-item" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
             <a href="https://www.facebook.com/mariya.ishchuk" class="nav-item" target="_blank"><i class="fa fa-facebook-square fa-3x" aria-hidden="true"></i></a>
             <a href="https://www.instagram.com/mari_ishchuk/" class="nav-item" target="_blank"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
+            <a href="https://github.com/mariya-ishchuk" class="nav-item" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></i></a>
         </nav>
     </footer>
     
