--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <p>front-end<br>developer</p>
         </div>
     </header>
-    <section id="about" class="about-me">
+    <section class="about-me">
         <h2 class="hi">hi!</h2>
         <p class="my-story">Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
         sed diam nonummy nibh euismod tincidunt ut laoreet dolore
