--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     </header>
     <section class="about-me">
         <h2 class="hi">hi!</h2>
-        <p class="my-story">Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-        sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+        <p class="my-story">Hello, my name is Mariya Ishchuk. I'm a front-end developer living and 
+        working in Lviv, Ukraine. Sed diam nonummy nibh euismod tincidunt ut laoreet dolore
         magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
         quis nostrud exerci tation ullamcorper suscipit lobortis nisl
         ut aliquip ex ea commodo consequat. Duis autem vel eum iriure
