--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>mari</title>
-    <link rel="stylesheet" href="css/index.css" type="text/css" />
+    <link rel="stylesheet" href="css/index.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700" rel="stylesheet">
 </head>
-<body>
+<body class="wraper">
     <header class="parallax-window" data-parallax="scroll" data-position="top" data-speed="1.2" data-image-src="css/img/mari_home.jpg">
         <div class="header-container clearfix">
             <h2 class="fullname">Mari <span class="surename">Ishchuk</span></h2>
@@ -23,15 +23,13 @@
     </header>
     <section class="about-me">
         <h2 class="hi">hi!</h2>
-        <p class="my-story">Hello, my name is Mariya Ishchuk. I'm a front-end developer living and 
-        working in Lviv, Ukraine. Sed diam nonummy nibh euismod tincidunt ut laoreet dolore
-        magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-        quis nostrud exerci tation ullamcorper suscipit lobortis nisl
-        ut aliquip ex ea commodo consequat. Duis autem vel eum iriure
-        dolor in hendrerit in vulputate velit esse molestie consequat,
-        vel illum dolore eu feugiat nulla facilisis at vero eros et
-        accumsan et iusto odio dignissim qui blandit praesent luptatum
-        zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+        <p class="my-story">I'm Mariya Ishchuk, Ternopil native, living and working in Lviv, Ukraine. 
+        Fluent in HTML5 CSS3 and improving on my JavaScript jQuery every day. I am beginner with not much
+        experience yet but like to gather knowledge of front-end techniques trying to be UX and Design thinking. 
+        I love structure and order and I also stand for quality. I love spending time on fixing little details 
+        and optimizing my projects. Also I like working in a team, you'll learn faster and more. I am always 
+        ready for projects where I can jump in and practice. When not working I put in rock climbing, try to 
+        travel to as many places possible and obsess over my beagle dog Brian.</p>
     </section>
     <section id="work" class="workspace" class="parallax-window" data-parallax="scroll" data-image-src="css/img/workspace.jpg">
         <div class="work">
