--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
     <title>mari</title>
-    <link rel="stylesheet" href="css/index.css" type="text/css">
+    <link rel="stylesheet" href="css/reset.css" type="text/css" />
+    <link rel="stylesheet" href="css/index.css" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:700" rel="stylesheet">
 </head>
 <body class="wraper">
-    <header class="parallax-window" data-parallax="scroll" data-position="top" data-speed="1.2" data-image-src="css/img/mari_home.jpg">
+    <header class="parallax-window" data-parallax="scroll" data-position="top" data-speed="1.2" data-position-x="-100px" data-image-src="css/img/mari_home.jpg">
         <div class="header-container clearfix">
             <h2 class="fullname">Mari <span class="surename">Ishchuk</span></h2>
             <nav>
@@ -38,9 +39,11 @@
     </section>
     <section class="projects">
         <ul class="flex-container">
-            <li class="flex-item">1</li>
-            <li class="flex-item">2</li>
-            <li class="flex-item">3</li>
+            <li class="flex-item">
+                <a href="floriya/floriya.html"><img class="floriya" src="css/img/floriya_logo.jpg" /></a>
+            </li>
+            <li class="flex-item"><img class="floriya" src="css/img/floriya_logo.jpg" /></li>
+            <li class="flex-item"><img class="floriya" src="css/img/floriya_logo.jpg" /></li>
         </ul>
     </section>
     <section id="lifestyle" class="lifestyle" class="parallax-window" data-parallax="scroll" data-image-src="css/img/climb.jpg">
