--- a/floriya/floriya.html
+++ b/floriya/floriya.html
@@ -57,5 +57,19 @@
     </div>
   </section>
   
+  <footer>
+    <nav class="social">
+      <a href="https://www.skype.com/en/" class="nav-item" target="_blank"><i class="fa fa-skype fa-3x" aria-hidden="true"></i></a>
+      <a href="https://ua.linkedin.com/in/mariya-ishchuk-632301b7" class="nav-item" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
+      <a href="https://www.facebook.com/mariya.ishchuk" class="nav-item" target="_blank"><i class="fa fa-facebook-square fa-3x" aria-hidden="true"></i></a>
+      <a href="https://www.instagram.com/mari_ishchuk/" class="nav-item" target="_blank"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
+      <a href="https://github.com/mariya-ishchuk" class="nav-item" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+    </nav>
+    <div class="copy">
+      <a href="https://mariya-ishchuk.github.io/my_personal_page/" class"copyright" target="_blank">&copy Mariya Ishchuk 2016</a>
+    </div>
+  </footer>
+  
+  <script src="https://use.fontawesome.com/d7110cabd2.js"></script>
 </body>
 </html>
