--- a/floriya/floriya.html
+++ b/floriya/floriya.html
@@ -66,7 +66,7 @@
       <a href="https://github.com/mariya-ishchuk" class="nav-item" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
     </nav>
     <div class="copy">
-      <a href="https://mariya-ishchuk.github.io/my_personal_page/" class"copyright" target="_blank">&copy Mariya Ishchuk 2016</a>
+      <a href="https://mariya-ishchuk.github.io/my_personal_page/" class="copyright" target="_blank">&copy Mariya Ishchuk 2016</a>
     </div>
   </footer>
   
