--- a/index.html
+++ b/index.html
@@ -40,10 +40,14 @@
     <section class="projects">
         <ul class="flex-container">
             <li class="flex-item">
-                <a href="floriya/floriya.html"><img class="floriya" src="css/img/floriya_logo.jpg" /></a>
+                <a href="floriya/floriya.html" class="project-description" target="_blank"><img class="floriya" src="css/img/floriya_logo.jpg" /><p class="project-description">online store concept</p></a>
             </li>
-            <li class="flex-item"><img class="floriya" src="css/img/floriya_logo.jpg" /></li>
-            <li class="flex-item"><img class="floriya" src="css/img/floriya_logo.jpg" /></li>
+            <li class="flex-item">
+                <a href="#" class="project-description" target="_blank"><img class="project" src="css/img/project.jpg" /><p class="project-description">my next project</p></a>
+            </li>
+            <li class="flex-item">
+                <a href="#" class="project-description" target="_blank"><img class="project" src="css/img/project.jpg" /><p class="project-description">my next project</p></a>
+            </li>
         </ul>
     </section>
     <section id="lifestyle" class="lifestyle" class="parallax-window" data-parallax="scroll" data-image-src="css/img/climb.jpg">
@@ -52,11 +56,15 @@
         </div>
     </section>
     <section class="events">
-        <ul class="flex-container">
-            <li class="flex-item">1</li>
-            <li class="flex-item">2</li>
-            <li class="flex-item">3</li>
-        </ul>
+        <img src="css/img/brian.jpg" class="thumbnail"></img>
+        <div class="description">
+            <h2 class="heading">With Brian on the board</h2>
+            <p class="the-story">Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+            sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+            magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+            quis nostrud exerci.</p>
+            <button class="view-more">View more</button>
+        </div>
     </section>
     <section id="contacts" class="contact-me" class="parallax-window" data-parallax="scroll" data-image-src="css/img/city.jpg">
         <div class="contacts">
@@ -90,8 +98,11 @@
             <a href="https://ua.linkedin.com/in/mariya-ishchuk-632301b7" class="nav-item" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
             <a href="https://www.facebook.com/mariya.ishchuk" class="nav-item" target="_blank"><i class="fa fa-facebook-square fa-3x" aria-hidden="true"></i></a>
             <a href="https://www.instagram.com/mari_ishchuk/" class="nav-item" target="_blank"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
-            <a href="https://github.com/mariya-ishchuk" class="nav-item" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></i></a>
+            <a href="https://github.com/mariya-ishchuk" class="nav-item" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
         </nav>
+        <div class="copy">
+            <a href="https://mariya-ishchuk.github.io/my_personal_page/" class="copyright" target="_blank">&copy Mariya Ishchuk 2016</a>
+        </div>
     </footer>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
