--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
         <img src="css/img/brian.jpg" class="thumbnail"></img>
         <div class="description">
             <h2 class="heading">With Brian on the board</h2>
-            <p class="the-story">Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+            <p class="the-story">Love my dog sooo much (: Love spending time with him.
+            Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
             sed diam nonummy nibh euismod tincidunt ut laoreet dolore
             magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
             quis nostrud exerci.</p>
@@ -94,7 +95,7 @@
     
     <footer>
         <nav class="social">
-            <a href="https://www.skype.com/en/" class="nav-item" target="_blank"><i class="fa fa-skype fa-3x" aria-hidden="true"></i></a>
+            <a href="skype:masha.ishchuk?userinfo" class="nav-item" target="_blank"><i class="fa fa-skype fa-3x" aria-hidden="true"></i></a>
             <a href="https://ua.linkedin.com/in/mariya-ishchuk-632301b7" class="nav-item" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
             <a href="https://www.facebook.com/mariya.ishchuk" class="nav-item" target="_blank"><i class="fa fa-facebook-square fa-3x" aria-hidden="true"></i></a>
             <a href="https://www.instagram.com/mari_ishchuk/" class="nav-item" target="_blank"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
