--- a/index.html
+++ b/index.html
@@ -21,8 +21,11 @@
         <div class="front-end-dev">
             <p>front-end<br>developer</p>
         </div>
+        <section id="scroll-down" class="demo">
+            <a href="#about-me"><span></span><span></span><span></span>Scroll</a>
+        </section>
     </header>
-    <section class="about-me">
+    <section class="about-me" id="about-me">
         <h2 class="hi">hi!</h2>
         <p class="my-story">I'm Mariya Ishchuk, Ternopil native, living and working in Lviv, Ukraine. 
         Fluent in HTML5 CSS3 and improving on my JavaScript jQuery every day. I am beginner with not much
