scroll down fix

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p>front-end<br>developer</p>
         </div>
         <section id="scroll-down" class="demo">
-            <a href="#about-me"><span></span><span></span><span></span>Scroll</a>
+            <a href="#about-me"><span></span><span></span><span></span></a>
         </section>
     </header>
     <section class="about-me" id="about-me">
